# NoveanX_backend

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4a06ac83f295_make_the_foog_name_column_not_unique_.py
data/: jarvis.db
jarvis_backend/: README.md  database.db  pyproject.toml  test_api.ipynb
jarvis_backend/src/: core.py  db.py  main.py  models.py
jarvis_backend/src/api/: foods.py
jarvis_frontend/: buildozer.spec  pyproject.toml  test.ipynb
jarvis_frontend/src/: layouts.py  main.py  screens.py
src/: client.ipynb  database.py  main.py  manage.py  models.py  schemas.py  settings.py
src/NovaenX_backend/: asgi.py  settings.py  urls.py  wsgi.py
src/crud/: food.py
src/food_tracker/: admin.py  models.py  serializers.py  urls.py  views.py
src/food_tracker/migrations/: 0001_initial.py
src/routers/: food.py
src/workout_tracker/: admin.py  models.py  serializers.py  urls.py  views.py
src/workout_tracker/migrations/: 0001_initial.py  0002_alter_workoutset_reps_alter_workoutset_weight.py
