[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "fastapi[standard]>=0.115.12",
    "jupyter>=1.1.1",
    "notebook>=7.4.3",
    "pytz>=2025.2",
    "sqlmodel>=0.0.24",
]
